postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: default
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.4
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
          resources: {}
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pvc
