postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - protocol: 'TCP'
      port: 5432
      targetPort: 5432
