todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: default
spec:
  selector: 
    app: todo-api
  type: ClusterIP
  ports:
    - protocol: 'TCP'
      port: 5277
      targetPort: 5277
