todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: default
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
    - protocol: 'TCP'
      port: 5173
      targetPort: 5173
